# fem4grav1

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  Snakefile  config.yaml  pyproject.toml  setup.py
.github/workflows/: python.yml
.snakemake/metadata/: cmVzdWx0cy9mbGVncmVpLm5weg==
data/: Flegrei.txt
docs/source/: conf.py  index.rst
fem4grav/: __init__.py  __main__.py  cli.py  fem4grav.py  plotting.py
tests/: test_boundary_regional.py  test_cli.py  test_cli_validation.py  test_grid_pipeline.py  test_middle_value.py  test_shape_functions.py
