[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fem4grav"
version = "0.0.1"
description = "Finite Element Method (FEM) for regional-residual separation of gravity anomaly maps"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Ayissi Mballa TAGNI", email = "tagniayissimballa@gmail.com" },
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "matplotlib>=3.6",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Geophysics",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "flake8",
    "snakemake"
]

# Les liens utiles qui apparaîtront sur la page du projet
[project.urls]
Homepage = "https://github.com/TagniAyissi/fem4grav1"
"Bug Tracker" = "https://github.com/TagniAyissi/fem4grav1/issues"

[project.scripts]
fem4grav = "fem4grav.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fem4grav*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["fem4grav"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true